--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "httpx[socks]>=0.28.1",
+    "pyzotero>=1.8.0",
 ]
 
 [dependency-groups]
