--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "httpx[socks]>=0.28.1",
+    "pydantic>=2.12.5",
     "pyzotero>=1.8.0",
 ]
 
