feat(zotero): 添加根据集合名称获取集合key的功能并完善测试配置
- 新增get_collection_key_by_name方法用于根据集合名称查找对应的key
- 修改ZOTERO_PORT从23124改为23119
- 在main.py中添加all_collections()调用以初始化集合数据
- 添加pytest相关依赖包包括pytest、pytest-sugar、pytest-cov等
- 创建tests/conftest.py配置文件用于测试时绕过代理设置
- 创建完整的tests/test_zotero_ex.py单元测试文件包含多个测试用例
- 更新uv.lock文件同步依赖变更

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pytest>=9.0.2",
+    "pytest-sugar>=1.1.1",
+    "pytest-cov>=7.0.0",
+    "pytest-dependency>=0.6.0",
     "ruff>=0.14.14",
 ]
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
 
 [tool.ruff]
 preview = true
