--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "zotero-mcp-py"
 version = "0.1.0"
@@ -17,6 +21,9 @@ dev = [
     "pytest-dependency>=0.6.0",
     "ruff>=0.14.14",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 preview = true
