--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "fastmcp>=2.14.4",
     "httpx[socks]>=0.28.1",
     "pydantic>=2.12.5",
     "pyzotero>=1.8.0",
