--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastmcp>=2.14.4",
     "httpx[socks]>=0.28.1",
+    "loguru>=0.7.3",
     "pydantic>=2.12.5",
     "pyzotero>=1.8.0",
 ]
