--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest>=9.0.2",
-    "pytest-sugar>=1.1.1",
+    "gitpython>=3.1.46",
     "pytest-cov>=7.0.0",
     "pytest-dependency>=0.6.0",
+    "pytest-sugar>=1.1.1",
+    "pytest>=9.0.2",
+    "questionary>=2.1.1",
     "ruff>=0.14.14",
+    "semver>=3.0.4",
 ]
 
 [tool.setuptools.packages.find]
